--- a/style.css
+++ b/style.css
@@ -5,22 +5,20 @@
     list-style: none;
 }
 
-body {
-    
-}
+body {}
 
 .container-menu {
-    margin-top: 64px;
+    margin-top: 69px;
     width: auto;
     height: auto;
-    min-height: 77vh;
+    min-height: 72vh;
     flex-direction: row;
     flex-wrap: wrap;
     text-align: center;
 }
 
 .container-menu img {
-    height: 200px;
+    height: 180px;
     margin-top: 5px
 }
 
@@ -38,7 +36,7 @@ body {
 .deskripsitengah,
 .deskripsikanan {
     width: 380px;
-    height: 280px;
+    height: 250px;
     text-align: center;
     padding: 5px;
     margin-top: 5px;
@@ -49,11 +47,10 @@ body {
 
 .isi {
     font-size: 25px;
-    
+
 }
 
 .container-foter {
-    border-top: 1px solid black;
     height: auto;
     min-height: 14vh;
     background-size: cover;
@@ -103,7 +100,7 @@ body {
 .container-des {
     margin-top: 64px;
     height: auto;
-    min-height: 77vh;
+    min-height: 72vh;
     flex-direction: row;
     flex-wrap: wrap;
     text-align: center;
@@ -158,7 +155,7 @@ body {
 .container-about {
     margin-top: 64px;
     height: auto;
-    min-height: 77vh;
+    min-height: 72vh;
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
@@ -168,14 +165,15 @@ body {
 .deskripsiabout,
 .deskripsiabout1 {
     padding: 10px;
-    margin-top: 22px;
+    margin-top: 3px;
     float: left;
     font-family: "Poppins", sans-serif;
     font-weight: normal;
 }
 
-.deskripsiabout h2 {
-    height: 500px;
+.deskripsiabout p {
+    font-size: 25px;
+    height: 150px;
     width: 1050px;
     margin-left: 20px;
     text-align: justify;
@@ -191,7 +189,7 @@ body {
 .container-ex {
     margin-top: 64px;
     height: auto;
-    min-height: 77vh;
+    min-height: 72vh;
     flex-direction: row;
     flex-wrap: wrap;
     text-align: center;
@@ -202,7 +200,7 @@ body {
 .ykjm,
 .fscm {
     width: 1450px;
-    margin-left: 32px;
+    margin-left: 40px;
     margin-top: 9px;
     padding: 8px;
     text-align: center;
@@ -245,9 +243,9 @@ body {
 }
 
 .container-project {
-    margin-top: 64px;
+    margin-top: 75px;
     height: auto;
-    min-height: 77vh;
+    min-height: 71vh;
     flex-direction: row;
     flex-wrap: wrap;
     text-align: center;
@@ -399,33 +397,26 @@ section img {
     height: 600px;
 }
 
-.projectmix {
-    display: flex;
-}
-.projectmix table{
-    height: 400px;
-    width: 850px;
-}
-.des-mix{
-    margin-top: 200px;
-    padding: 40px;
+
+.des-mix {
     font-family: "Poppins", sans-serif;
+    text-align: justify;
 }
+
 .Headmix {
     font-size: x-large;
-    position:relative; top:0px; left:0px; margin-left:0px; margin-right:0px
 }
+
 .samadengan {
     padding-left: 10px;
     padding-right: 10px;
     font-size: x-large;
-    
+
 }
+
 .isihead {
     font-size: x-large;
-    
-    text-align: justify;
-    
+
 }
 
 section img {
@@ -469,33 +460,19 @@ section img {
     justify-content: center;
 }
 
-.partfiless table{
-    margin-left: 20px;
-    padding: 10px;
-    border-collapse: collapse;
+.partfiless-table {
+
     font-size: x-large;
     font-family: "Poppins", sans-serif;
 }
+
 .no {
     height: 20px;
     width: 40px;
 }
+
 .partname {
     width: 300px;
-}
-.partfiless1 img {
-    width: 450px;
-    margin-top: 25px;
-    margin-left: 35px;
-    margin-bottom: 30px;
-    padding: 30px 30px;
-    float: left;
-    border-radius: 30px;
-    height: 600px;
-}
-
-.partfiless1 img:hover {
-    background-color: #f0f0f0;
 }
 
 .partfiless {
@@ -521,16 +498,18 @@ section img {
     margin: 20px;
     border-radius: 80px;
 }
+
 .container-activity {
     margin-top: 64px;
     height: auto;
-    min-height: 77vh;
+    min-height: 72vh;
     align-content: center;
     font-family: "Poppins", sans-serif;
 }
+
 .seminar,
 .lomba {
-    border-left: 2px solid;
+    border-left: 1px solid;
     margin: 40px;
     padding: 10px;
     text-decoration: none;
@@ -588,7 +567,64 @@ section img {
 }
     
 */
+@media screen and (max-width: 1440) {
+    /*about*/
+    .container-about {
+        width: auto;
+        height: auto;
+        margin: auto;
+    }
+
+    .deskripsiabout p {
+        margin: auto;
+        width: auto;
+        height: auto;
+        font-size: medium;
+    }
+
+    .deskripsiabout1 img {
+        margin-top: 70px;
+        height: 250px;
+    }
+    /*project*/
+    .container-project {
+        height: auto;
+        width: auto;
+       
+    }
+
+    .project1,
+    .project2,
+    .project3 {
+        width: 320px;
+        height: 370px;
+        text-align: center;
+        align-content: center;
+    }
+
+    .project1 h1,
+    .project2 h1,
+    .project3 h1 {
+        font-size: 20px;
+    }
+
+    .project1 img,
+    .project2 img,
+    .project3 img {
+        height: 200px;
+    }
+
+    .project1 button,
+    .project2 button,
+    .project3 button {
+        width: 80px;
+        margin-top: 5px;
+        font-size: 10px;
+    }
+}
+
 @media screen and (max-width: 1024px) {
+    /*home*/
     .container-menu {
         height: auto;
         text-align: center;
@@ -617,37 +653,48 @@ section img {
         font-size: 20px;
     }
 
+    /*education*/
     .container-des {
         height: auto;
         width: auto;
     }
-    .education1, .education2{
+
+    .education1,
+    .education2 {
         height: auto;
         width: auto;
         margin: auto;
     }
+
     .des-smk,
     .des-kuliah {
         align-items: center;
         text-align: center;
     }
+
     .smk,
     .des-smk {
         float: none;
     }
+
     .kuliah,
     .des-kuliah {
         float: none;
     }
+
+    /*foter*/
     .container-foter {
         height: auto;
         width: auto;
     }
+
+    /*about*/
     .container-about {
         width: auto;
         height: auto;
         margin: auto;
     }
+
     .deskripsiabout,
     .deskripsiabout1 {
         padding: auto;
@@ -655,15 +702,20 @@ section img {
         width: auto;
         float: none;
     }
-    .deskripsiabout h2 {
+
+    .deskripsiabout p {
         margin: auto;
         width: auto;
         height: auto;
         font-size: medium;
     }
+
     .deskripsiabout1 img {
+        margin-top: 70px;
         height: 300px;
     }
+
+    /*experience*/
     .container-ex {
         height: auto;
         width: auto;
@@ -671,6 +723,7 @@ section img {
         text-align: center;
         align-items: center;
     }
+
     .toyota,
     .ykjm,
     .fscm {
@@ -678,11 +731,14 @@ section img {
         width: auto;
         margin: 10px;
     }
+
+    /*project*/
     .container-project {
         height: auto;
         width: auto;
         margin-top: 64px;
     }
+
     .project1,
     .project2,
     .project3 {
@@ -692,16 +748,19 @@ section img {
         text-align: center;
         align-content: center;
     }
+
     .project1 h1,
     .project2 h1,
     .project3 h1 {
         font-size: 20px;
     }
+
     .project1 img,
     .project2 img,
     .project3 img {
         height: 200px;
     }
+
     .project1 button,
     .project2 button,
     .project3 button {
@@ -709,40 +768,53 @@ section img {
         margin-top: 5px;
         font-size: 10px;
     }
+
+    /*project-crank*/
     .container-crank {
         width: auto;
         height: auto;
-        
     }
     .container-crank img {
         margin-top: 64px;
         height: 350px;
     }
+
     .crank-deskripsion h1 {
         margin: auto;
-        font-size:x-large;
+        font-size: x-large;
     }
+
     .crank-deskripsion h2 {
-        font-size:large;
+        font-size: large;
     }
+
     section img {
         height: 450px;
         margin: auto;
     }
 
+    /*project-mix*/
     section {
         margin: auto;
         height: auto;
-    
     }
 
+    .container-mix {
+        margin: auto;
+        width: auto;
+        height: auto;
+        text-align: center;
+        align-content: center;
+    }
 
-
+    /*activity*/
     .container-activity {
         height: auto;
-        
+
     }
-    .seminar, .lomba{
+
+    .seminar,
+    .lomba {
         height: auto;
         width: auto;
     }
@@ -750,10 +822,17 @@ section img {
 }
 
 @media screen and (max-width: 768px) {
+
+    /*project*/
     .container-project {
         height: auto;
         width: auto;
         margin-top: 64px;
+    }
+    .project1 img,
+    .project2 img,
+    .project3 img {
+        height: auto;
     }
 
     .project1,
@@ -772,11 +851,13 @@ section img {
     .project3 h1 {
         font-size: 30px;
     }
+
     .project1 img,
     .project2 img,
     .project3 img {
         height: 400px;
     }
+
     .project1 button,
     .project2 button,
     .project3 button {
@@ -784,10 +865,25 @@ section img {
         margin-top: 5px;
         font-size: 15px;
     }
+
+    /*project-mic*/
+    .mix-calcu img {
+        width: 80%;
+        height: 80%;
+        margin: auto;
+    }
 }
 
 @media screen and (max-width: 665px) {
-    .foter-2, .foter-3 {
+    /*prject*/
+    .project1 img,
+    .project2 img,
+    .project3 img {
+        height: 250px;
+    }
+    /*foter*/
+    .foter-2,
+    .foter-3 {
         border: none;
     }
 }
