--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body {}
 .p-foter {
     margin-top: 3px;
     font-size: 15px;
+    text-decoration: none;
     font-family: "Poppins", sans-serif;
 }
 
@@ -496,7 +497,7 @@ section img {
     height: 600px;
     padding: 30px;
     margin: 20px;
-    border-radius: 80px;
+    border-radius: 40px;
 }
 
 .container-activity {
@@ -806,7 +807,7 @@ section img {
         text-align: center;
         align-content: center;
     }
-
+    
     /*activity*/
     .container-activity {
         height: auto;
@@ -880,6 +881,9 @@ section img {
     .project2 img,
     .project3 img {
         height: 250px;
+    }
+    .finalresult2 img {
+        height: 500px;
     }
     /*foter*/
     .foter-2,
